# nemo-mpi

./: .gitignore  CMakeCache.txt  Makefile  Presentation.odp  README_DISTRIBUTED  benchmark.sh  benchmarkMPI.sh  benchmark_neuron.sh  benchmark_steps.sh  benchmark_synapses.sh  draw.p
benchmark/: benchmark_neurond.sh  benchmark_runtime.sh  benchmark_stepsd.sh  benchmark_synapsesd.sh  mac
benchmark/output_neuron/: mpi1.txt  mpi2.txt  mpi3.txt  mpi4.txt  mpi5.txt  rand.txt
benchmark/output_runtime/: draw.p
benchmark/output_steps/: draw.p
benchmark/output_synapse/: draw.p  mpi1.txt  mpi2.txt  mpi3.txt  mpi4.txt  mpi5.txt  rand.txt
check/: benchmark_neuron.sh  benchmark_runtimed.sh  benchmark_steps.sh  benchmark_synapses.sh
check/output_neuron/: draw.p
doc/manual/: .gitignore
presentation/: Presentation.odp
report/: .gitignore  1_introduction.tex  2_background.tex  3_design.tex  3_objectives.tex  4_design.tex  4_implementation.tex  5_evaluation.tex  5_improvements.tex  6_conclusion.tex  6_evaluation.tex  Makefile  interim_report.tex  myrefs.bib  myrefs.bib.bak  report.aux  report.bbl  report.blg  report.tex  report.toc
report/code/: MapperSim.cpp  MapperSim.hpp  MasterSimulation.cpp  MasterSimulation.hpp  WorkerSimulation.cpp  WorkerSimulation.hpp
report/interim/: Makefile  interim_report.dvi  myrefs.bib.bak
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  common.cpp  common.hpp  mpi_dist.cpp  mpi_dist_general.cpp  neuron_data.hpp  parsing.cpp  parsing.hpp  random.cpp  torus.cpp
src/mpi/: BlockingMaster.cpp  BlockingMaster.hpp  BlockingWorker.cpp  BlockingWorker.hpp  CMakeLists.txt  MapperSim.cpp  MapperSim.hpp  MasterSimulation.cpp  MasterSimulation.hpp  NeuronData.hpp  WorkerSimulation.cpp  WorkerSimulation.hpp  parsing.cpp  parsing.hpp
src/mpi_dist/: CMakeLists.txt  MapperSim.cpp  MapperSim.hpp  MasterSimulation.cpp  MasterSimulation.hpp  SimulationMPI.cpp  SimulationMPI.hpp  WorkerSimulation.cpp  WorkerSimulation.hpp  mpi_tags.hpp  parsing.cpp  parsing.hpp
src/nemo/: CMakeLists.txt  Configuration.hpp  MapperSim.cpp  MapperSim.hpp  MasterSimulation.cpp  MasterSimulation.hpp  Network.cpp  Network.hpp  NetworkImpl.cpp  NetworkImpl.hpp  Neuron.hpp  WorkerSimulation.cpp  WorkerSimulation.hpp  mpi_tags.hpp  parsing.cpp  parsing.hpp
